# sim-connectivity-monitor

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml  working-notes.md
config/: config.example.yaml
config/profiles.d/: 00-hologram-default.yaml  50-custom.yaml.example
deploy/: self-update.sh  sim-monitor.service
deploy/udev/: 77-sim-monitor.rules
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  main.ts
frontend/src/lib/: ConfirmModal.svelte  ConnectivityHistory.svelte  ContextEditor.svelte  Copyable.svelte  LatencyChart.svelte  LatencyPanel.svelte  ModemSetup.svelte  Sparkline.svelte  Toasts.svelte  UrcConsole.svelte  api.ts  confirm.ts  format.ts  signal.ts  stores.ts  theme.css  toast.ts
frontend/src/views/: Dashboard.svelte  Diagnostics.svelte  Events.svelte  Latency.svelte  Scan.svelte  (+10 more)
src/sim_monitor/: __main__.py  app.py
tests/: test_at_channel.py  test_at_parser.py  test_config_loader.py  test_detect.py  test_diagnostics.py  test_drivers.py  test_http_checks.py  test_http_monitor.py  test_latency.py  test_matcher.py  test_message_db.py  test_modem_setup.py  test_ota_sms.py  test_pdp_reconcile.py  test_pdu.py  test_placeholders.py  test_scan.py  test_schedule.py  test_sms.py  test_sms_reply.py  test_statemachine.py  test_status.py  test_supervisor.py  test_system_wrappers.py  test_tcp_listener.py  test_tcp_reply.py  test_telemetry.py  test_traffic.py  test_udp_listener.py  test_udp_reply.py  test_uptime.py  test_usb_power.py  test_web_routes.py
(+158 files in other folders)
