[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sim-monitor"
version = "0.1.0"
description = "Cellular connectivity monitor for Raspberry Pi with Hologram SIMs (Quectel/SIMCOM/Telit USB modems)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "waitress>=3.0",
    "pyserial>=3.5",
    "pyyaml>=6.0",
    "requests>=2.31",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
sim-monitor = "sim_monitor.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sim_monitor = ["web/spa/*", "web/spa/assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
